package es.ull.practica03.TemplatePattern;

public interface ISolution {
    String toString();
}
